--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,30 @@
+:root {
+  --bs-sidebar-dark: #333547;
+  --bs-sidebar-item-dark: #383b4e;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: var(--bs-font-sans-serif);
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #5b626b;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+  margin: 0;
+  padding: 0;
 }
