--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,8 @@
 :root {
   --bs-sidebar-dark: #333547;
   --bs-sidebar-item-dark: #383b4e;
+  --col-sidebar: #8699ad;
+  --col-sidebar-hover: #b4c9de;
 }
 
 html,
