--- a/src/components/containers/Header/styles.module.scss
+++ b/src/components/containers/Header/styles.module.scss
@@ -1,5 +1,44 @@
+@import "../../../styles/mixins";
+
 .Container {
+  display: flex;
   width: 100%;
   height: 7rem;
   background-color: #f8f8fa;
+
+  &Logo {
+    width: 24rem;
+    height: 7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    background-color: var(--bs-sidebar-dark);
+  }
+
+  &Header {
+    display: flex;
+    align-items: center;
+    padding: 0.4rem 1.6rem;
+
+    &Left {
+      cursor: pointer;
+    }
+
+    &Rigth {
+      background-color: rebeccapurple;
+    }
+  }
+}
+
+@include medium-screen {
+  .Container {
+    &Logo {
+      width: 7.88rem;
+
+      > span {
+        width: 11rem !important;
+      }
+    }
+  }
 }
