--- a/src/components/containers/Sidebar/styles.module.scss
+++ b/src/components/containers/Sidebar/styles.module.scss
@@ -1,15 +1,25 @@
-.Sidebar {
-  width: 29.05rem;
+@import "../../../styles/mixins";
+
+@mixin sidebar {
+  min-width: 24rem;
   height: 100vh;
   background-color: var(--bs-sidebar-dark);
   color: var(--col-sidebar);
   font-size: 1.57rem;
+}
 
-  &Header {
-    height: 7rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
+.Sidebar {
+  @include sidebar();
+}
+
+@include medium-screen {
+  .Sidebar {
+    display: none;
+
+    &Show {
+      @include sidebar();
+      display: initial;
+      position: absolute;
+    }
   }
 }
